# ag2_ag-ui_example

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml
src/ag2_example/: config.py  logging_config.py
src/ag2_example/alembic/: env.py
src/ag2_example/alembic/versions/: 697eed3b3b8f_initial_notes.py
src/ag2_example/api/agent/: __init__.py  agent_factory.py  prompts.py
src/ag2_example/api/agent/tools/: __init__.py  notes.py  utility.py
src/ag2_example/api/middlewares/: __init__.py  request_id.py
src/ag2_example/api/routes/: __init__.py  chat.py  health.py  notes.py
src/ag2_example/api/schemas/: note.py
src/ag2_example/domain/entities/: __init__.py  note.py
src/ag2_example/gateways/: __init__.py
src/ag2_example/gateways/db/note/: __init__.py  alchemy.py  interface.py
src/ag2_example/main/: di.py  entrypoint.py  middleware.py
src/ag2_example/main/providers/: __init__.py  agent.py  database.py  repositories.py  settings.py  usecases.py
src/ag2_example/models/: __init__.py  tables.py
src/ag2_example/usecases/: __init__.py  errors.py  uow.py
src/ag2_example/usecases/note/: __init__.py  create_note.py  delete_note.py  get_note.py  list_notes.py
tests/fakes/: note_repository.py  uow.py
tests/integration/: conftest.py  test_chat_sse.py  test_notes_rest.py
tests/unit/: test_note_usecases.py
