[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ag2_example"
module-root = "src"

[project]
name = "ag2-ag-ui-example"
version = "0.1.0"
description = "Public reference example: FastAPI + Dishka + AG2.beta with AG-UI protocol"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Semen Frolov", email = "vvlrff@gmail.com" }]
requires-python = ">=3.13"

dependencies = [
    "ag2[ag-ui,openai]>=0.12",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "dishka>=1.4.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "greenlet>=3.0",
    "structlog>=25.1.0",
    "httpx>=0.28.0",
    "alembic>=1.13",
    "dishka-ag2>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "dirty-equals>=0.8",
    "import-linter>=2.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
files = ["src/ag2_example", "tests"]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM",
]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["ag2_example"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
